src/components/Footer/index.css
a {
  padding: 5px !important;
}

.copyright {
  font-size: 12px;
}
.footer-container {
  width: 100%;
}
.inner-container {
  justify-content: center !important;
}

@media (max-width: 768px) {
  .link-container {
    width: 100%;
    padding-left: 0;
    padding-right: 0;
    margin: auto;
    font-size: 10px;
    align-items: center;
    justify-content: center !important;
  }

}

@media (max-width: 1280px) {
  .link-container {
    align-items: center;
    justify-content: center !important;
    margin: auto !important;
    width: 100%;
  }
  .logo-container {
    width: 100%;
  }
}

